--- a/.github/workflows/login.yml
+++ b/.github/workflows/login.yml
@@ -3,15 +3,12 @@ name: Super-Linter
 on: push
 
 jobs:
-  super-lint:
-    name: Lint code base
+  check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Run Super-Linter
-        uses: github/super-linter@v3
-        env:
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - run: npm install -g bats
+      - run: bats -v
