--- a/.github/workflows/login.yml
+++ b/.github/workflows/login.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   check-bats-version:
-    runs-on: ubuntu-latest
+    runs-on: Microsoft Windows
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
