--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,17 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>LoginFunctionality.java</mainClass>
+                    <mainClass>com.login.LoginFunctionality.java</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
                 </configuration>
             </plugin>
         </plugins>
@@ -47,6 +57,7 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.0.0-M5</version>
             <type>maven-plugin</type>
+
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
@@ -54,7 +65,15 @@
             <version>3.8.1</version>
             <type>maven-plugin</type>
         </dependency>
-    </dependencies>
+        <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>7.4.0</version>
+        <scope>compile</scope>
+    </dependency>
+
+
+</dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
