--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -18,6 +18,13 @@ jobs:
    
     steps:
         - uses: actions/checkout@v2
+        - name: Install cypress and verify
+          run:
+           npm ci
+           %(npm bin)/cypress verify
+        - name: Run cypress tests
+          run: npm run test:chrome
+           continue-on-error:false
         - name: Set up JDK 11
           uses: actions/setup-java@v2
           with:
