--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,10 +10,9 @@ on:
     branches: [ master ]
 
 jobs:
- cypress-test:
-    name: Run on chrome 94
-    runs-on: ubuntu-18.04
-    container: cypress/browsers:node16.5.0-chrome94-ff93  
+ build:
+
+    runs-on: ubuntu-latest 
 
 
    
@@ -28,3 +27,11 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Merge test reports
+      run: npm run combine :report
+    - name: npm run generate :report
+    - name: Deploy report page to Github page
+      uses: peaceiris/actions -gh-pages@v3
+      with:
+            github-token: ${{secrets.GITHUB-TOKEN}}
+            publish-dir: ./public
