--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -28,7 +28,8 @@ jobs:
        
         - name: Merge test reports
           run: npm run combine :report
-        - name: npm run generate :report
+        - name: Generate HTML report
+          run: npm run generate :report
         - name: Deploy report page to Github page
           uses: peaceiris/actions -gh-pages@v3
           with:
