--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -31,7 +31,7 @@ jobs:
         - name: Generate HTML report
           run: npm run generate :report
         - name: Deploy report page to Github page
-          uses: peaceiris/actions -gh-pages@v3
+          uses: peaceiris/actions-gh-pages@v3
           with:
             github-token: ${{secrets.GITHUB-TOKEN}}
             publish-dir: ./public
