--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -21,7 +21,7 @@ jobs:
         - name: Install cypress and verify
           run:
            npm ci
-           %(npm bin)/cypress verify
+           $(npm bin)/cypress verify
         - name: Run cypress tests
           run: npm run test:chrome
            continue-on-error:false
