--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -18,13 +18,19 @@ jobs:
    
     steps:
         - uses: actions/checkout@v2
-        - name: Install cypress and verify
-          run:
-           npm ci
-           $(npm bin)/cypress verify
+       
         - name: Run cypress tests
           run: npm run test:chrome
            continue-on-error:false
+           
+        - name: Set up JDK 11
+          uses: actions/setup-java@v2
+          with:
+           java-version: '11'
+           distribution: 'adopt'
+           cache: maven
+        - name: Build with Maven
+          run: mvn -B package --file pom.xml
        
         - name: Merge test reports
           run: npm run combine :report
