--- a/pom.xml
+++ b/pom.xml
@@ -52,13 +52,11 @@
             <artifactId>selenium-server</artifactId>
             <version>3.141.59</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.apache.maven.plugins</groupId>-->
-<!--            <artifactId>maven-surefire-plugin</artifactId>-->
-<!--            <version>3.0.0-M5</version>-->
-<!--            <type>maven-plugin</type>-->
-
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.github.adiralashiva8</groupId>
+            <artifactId>testng-metrics</artifactId>
+            <version>1.6</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
