--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
         <version>7.4.0</version>
         <scope>compile</scope>
     </dependency>
+        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.0.3</version>
+        </dependency>
 
 
 </dependencies>
