--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -30,7 +30,7 @@ jobs:
         - name: Deploy report page to Github page
           uses: peaceiris/actions-gh-pages@v3
           with:
-            github-token: ${{secrets.GITHUB-TOKEN}}
+            github-token: ${{secrets.GITHUB_TOKEN}}
             publish-dir: ./public
           
           
