--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -30,7 +30,7 @@ jobs:
         - name: Deploy report page to Github page
           uses: peaceiris/actions-gh-pages@v3
           with:
-            deploy_key: ${{secrets.GITHUB_TOKEN}}
+            deploy_key: ${{secrets.DEPLOY_PRIVATE_KEY}}            
             publish-dir: ./public
           
           
