--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -32,7 +32,7 @@ jobs:
           with:
             deploy_key: ${{secrets.DEPLOY_PRIVATE_KEY}} 
             publish_branch: gh-pages
-            publish-dir: ./test-output/testng_metrics.html
+            publish_dir: ./public
             
           
           
