--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,11 @@
             <artifactId>webdrivermanager</artifactId>
             <version>5.0.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.adiralashiva8</groupId>
+            <artifactId>testng-metrics</artifactId>
+            <version>1.6</version>
+        </dependency>
 
 </dependencies>
 
